--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -21,20 +21,4 @@ jobs:
     
     - name: Run training
       run: |
-        python assign6.py | tee training.log
-    
-    - name: Update README with results
-      run: |
-        # Extract maximum accuracy from training log
-        MAX_ACC=$(grep "Maximum Accuracy achieved:" training.log | tail -n 1)
-        
-        # Update README.md
-        sed -i "/<!-- LATEST_RESULT -->/,/<!-- END_LATEST_RESULT -->/c\<!-- LATEST_RESULT -->\n${MAX_ACC}\n<!-- END_LATEST_RESULT -->" README.md
-    
-    - name: Commit and push if changed
-      run: |
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "github-actions[bot]"
-        git add README.md
-        git commit -m "Update training results" || exit 0
-        git push 
+        python assign6.py 
