Github action changes

--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -23,28 +23,20 @@ jobs:
       run: |
         python assign6.py 
 
-    - name: Check Parameter Count
+    - name: Check parameter count
       run: |
         echo "Checking total parameter count..."
-        python -c "
-        from model.network import Net
-        import torch
-        
-        model = Net()
-        total_params = sum(p.numel() for p in model.parameters() if p.requires_grad)
-        print(f'Total trainable parameters: {total_params:,}')
-        assert total_params < 20000, f'Model has {total_params:,} parameters, exceeding limit of 20,000'
-        "
-        
+        python3 -c "from assign6 import create_model; model = create_model(); print(f'Total parameters: {sum(p.numel() for p in model.parameters())}')"
+    
     - name: Check Architecture Requirements
       run: |
         echo "Checking model architecture requirements..."
-        python -c "
-        from model.network import Net
+        python3 -c "
+        from assign6 import create_model
         import torch
         import torch.nn as nn
         
-        model = Net()
+        model = create_model()
         
         # Check for Batch Normalization
         has_bn = any(isinstance(m, nn.BatchNorm2d) for m in model.modules())
@@ -72,11 +64,11 @@ jobs:
     - name: Check Forward Pass
       run: |
         echo "Verifying forward pass..."
-        python -c "
-        from model.network import Net
+        python3 -c "
+        from assign6 import create_model
         import torch
         
-        model = Net()
+        model = create_model()
         batch = torch.randn(1, 1, 28, 28)
         output = model(batch)
         
