--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -1,9 +1,9 @@
-name: Train MNIST Model
+name: Validate Model Architecture
 
 on: [push]
 
 jobs:
-  train:
+  validate:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,31 +17,22 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install torch torchvision
     
-    #- name: Run training
-    #  run: |
-    #    python assign6.py 
-
-    - name: Check parameter count
+    - name: Validate Model Architecture
       run: |
-        echo "Checking total parameter count..."
-        python3 -c "
-        from assign6 import create_model
-        model = create_model()
-        total_params = sum(p.numel() for p in model.parameters())
-        print(f'Total parameters: {total_params}')
-        assert total_params < 20000, f'Model has {total_params:,} parameters, exceeding limit of 20,000'
-        "
-    
-    - name: Check Architecture Requirements
-      run: |
-        echo "Checking model architecture requirements..."
+        echo "Validating model architecture..."
         python3 -c "
         from assign6 import create_model
         import torch.nn as nn
         
+        # Create model
         model = create_model()
+        
+        # Check parameter count
+        total_params = sum(p.numel() for p in model.parameters())
+        print(f'Total parameters: {total_params}')
+        assert total_params < 20000, f'Model has {total_params:,} parameters, exceeding limit of 20,000'
         
         # Check for Batch Normalization
         has_bn = any(isinstance(m, nn.BatchNorm2d) for m in model.modules())
@@ -60,30 +51,8 @@ jobs:
             for fc in fc_layers:
                 assert fc.in_features <= 128, f'FC layer input {fc.in_features} too large. Should use GAP or smaller FC layers'
         
-        print('✓ Architecture validation passed')
-        "
-        
-    - name: Check Forward Pass
-      run: |
-        echo "Verifying forward pass..."
-        python3 -c "
-        from assign6 import create_model
-        import torch
-        
-        model = create_model()
-        batch = torch.randn(1, 1, 28, 28)
-        output = model(batch)
-        
-        assert output.shape == (1, 10), f'Expected output shape (1, 10), got {output.shape}'
-        print('✓ Forward pass successful with correct output shape')
-        "
-        
-    - name: Summary
-      run: |
-        echo "=== Architecture Verification Summary ==="
-        echo "✓ Parameter count under 20,000"
-        echo "✓ Uses Batch Normalization"
-        echo "✓ Uses Dropout"
-        echo "✓ Uses Global Average Pooling"
-        echo "✓ Forward pass verified"
-        echo "All checks passed successfully!" 
+        print('✓ Parameter count:', total_params)
+        print('✓ Uses Batch Normalization')
+        print('✓ Uses Dropout')
+        print('✓ Architecture requirements satisfied')
+        " 
