--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install torch torchvision tqdm matplotlib numpy
+        pip install torch torchvision tqdm matplotlib numpy torchsummary
 
     - name: Check Parameter Count
       run: |
