--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -1,94 +1,99 @@
-name: Validate Model Architecture
+name: Model Architecture Tests
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  validate:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.8'
-    
+        python-version: '3.11'
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install torch torchvision tqdm matplotlib numpy torchsummary
-
+        pip install torch torchvision
+        
     - name: Check Parameter Count
       run: |
         echo "Checking total parameter count..."
-        python3 -c "
+        python -c "
         import sys, os
         sys.path.append(os.getcwd())
         from assign6 import create_model
         
         model = create_model()
-        total_params = sum(p.numel() for p in model.parameters())
-        print(f'Total parameters: {total_params}')
+        total_params = sum(p.numel() for p in model.parameters() if p.requires_grad)
+        print(f'Total trainable parameters: {total_params:,}')
         assert total_params < 20000, f'Model has {total_params:,} parameters, exceeding limit of 20,000'
         "
-
-    - name: Check Batch Normalization
+        
+    - name: Check Architecture Requirements
       run: |
-        echo "Checking for Batch Normalization layers..."
-        python3 -c "
+        echo "Checking model architecture requirements..."
+        python -c "
         import sys, os
         sys.path.append(os.getcwd())
         from assign6 import create_model
         import torch.nn as nn
         
         model = create_model()
+        
+        # Check for Batch Normalization
         has_bn = any(isinstance(m, nn.BatchNorm2d) for m in model.modules())
         assert has_bn, 'Model must use Batch Normalization'
-        print('✓ Model uses Batch Normalization')
-        "
-
-    - name: Check Dropout
-      run: |
-        echo "Checking for Dropout layers..."
-        python3 -c "
-        import sys, os
-        sys.path.append(os.getcwd())
-        from assign6 import create_model
-        import torch.nn as nn
         
-        model = create_model()
+        # Check for Dropout
         has_dropout = any(isinstance(m, nn.Dropout) for m in model.modules())
         assert has_dropout, 'Model must use Dropout'
+        
+        # Check for GAP (no large FC layers)
+        has_gap = any(isinstance(m, nn.AdaptiveAvgPool2d) for m in model.modules())
+        assert has_gap, 'Model must use Global Average Pooling'
+        
+        # Verify FC layer sizes
+        fc_layers = [m for m in model.modules() if isinstance(m, nn.Linear)]
+        for fc in fc_layers:
+            assert fc.in_features <= 128, f'FC layer input {fc.in_features} too large. Should use GAP'
+        
+        print('✓ Model uses Batch Normalization')
         print('✓ Model uses Dropout')
+        print('✓ Model uses Global Average Pooling')
+        print('✓ No large FC layers found')
         "
-
-    - name: Check GAP/FC Layers
+        
+    - name: Check Forward Pass
       run: |
-        echo "Checking for GAP or appropriate FC layers..."
-        python3 -c "
+        echo "Verifying forward pass..."
+        python -c "
         import sys, os
         sys.path.append(os.getcwd())
         from assign6 import create_model
-        import torch.nn as nn
+        import torch
         
         model = create_model()
-        has_gap = any(isinstance(m, nn.AdaptiveAvgPool2d) for m in model.modules())
-        fc_layers = [m for m in model.modules() if isinstance(m, nn.Linear)]
+        batch = torch.randn(1, 1, 28, 28)
+        output = model(batch)
         
-        if not has_gap:
-            for fc in fc_layers:
-                assert fc.in_features <= 128, f'FC layer input {fc.in_features} too large. Should use GAP or smaller FC layers'
-            print('✓ Model uses appropriate FC layers')
-        else:
-            print('✓ Model uses Global Average Pooling')
+        assert output.shape == (1, 10), f'Expected output shape (1, 10), got {output.shape}'
+        print('✓ Forward pass successful with correct output shape')
         "
-
+        
     - name: Summary
       run: |
-        echo "=== Architecture Validation Summary ==="
+        echo "=== Architecture Verification Summary ==="
         echo "✓ Parameter count under 20,000"
-        echo "✓ Batch Normalization implemented"
-        echo "✓ Dropout implemented"
-        echo "✓ Architecture requirements satisfied"
+        echo "✓ Uses Batch Normalization"
+        echo "✓ Uses Dropout"
+        echo "✓ Uses Global Average Pooling"
+        echo "✓ Forward pass verified"
         echo "All checks passed successfully!" 
